--- a/app/src/main/res/layout/activity_my_personal_page.xml
+++ b/app/src/main/res/layout/activity_my_personal_page.xml
@@ -25,7 +25,9 @@
                 
                 
                 
-                <RelativeLayout
+                <LinearLayout
+                    android:gravity="center_horizontal|center_vertical"
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
@@ -34,9 +36,9 @@
                         android:layout_width="50dp"
                         android:layout_height="match_parent"
                         android:layout_gravity="start|center_vertical"
-
                         android:scaleType="centerInside"
                         android:layout_margin="5dp"
+                        android:layout_weight="1"
                         android:src="@drawable/ic_arrow_back_black_24dp"
                         />
 
@@ -45,13 +47,22 @@
                         android:layout_width="wrap_content"
                         android:fontFamily="@font/cairo"
                         android:textColor="#767373"
-
+                        android:layout_weight="10"
                         android:gravity="center_horizontal|center_vertical"
                         android:text="تفاصيل الحساب"
                         android:layout_centerInParent="true"
                         android:layout_height="match_parent" />
-
-                </RelativeLayout>
+                    <ProgressBar
+                        android:layout_weight="1"
+                        android:id="@+id/progress"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:theme="@style/CircularProgress2"
+                        style="?android:attr/progressBarStyleSmall"
+                        android:visibility="invisible"
+                        android:layout_marginEnd="13dp"
+                        />
+                </LinearLayout>
                 
                 
             </android.support.v7.widget.Toolbar>
